; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromR4.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromR4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLOAT = common dso_local global i32 0, align 4
@VarDateFromR4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarDateFromR4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarDateFromR4() #0 {
  %1 = load i32, i32* @FLOAT, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarDateFromR4, align 4
  %4 = call i32 @CONVERT(i32 %3, float -1.000000e+00)
  %5 = call i32 @EXPECT(double -1.000000e+00)
  %6 = load i32, i32* @VarDateFromR4, align 4
  %7 = call i32 @CONVERT(i32 %6, float 0.000000e+00)
  %8 = call i32 @EXPECT(double 0.000000e+00)
  %9 = load i32, i32* @VarDateFromR4, align 4
  %10 = call i32 @CONVERT(i32 %9, float 1.000000e+00)
  %11 = call i32 @EXPECT(double 1.000000e+00)
  %12 = load i32, i32* @VarDateFromR4, align 4
  %13 = call i32 @CONVERT(i32 %12, float 1.500000e+00)
  %14 = call i32 @EXPECT(double 1.500000e+00)
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, float) #1

declare dso_local i32 @EXPECT(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
